# ffxiv-assistant

./: .env  Cargo.toml  README.md
.github/workflows/: build_check.yaml
.sqlx/: query-11820c7e95f4e53260fec5c14a334e2adccf9ffa6ac1a65f4373355f5c5a3404.json
migrations/: 20240629121236_create_users_table.up.sql
src/: main.rs
src/commands/: about.rs  market.rs  news.rs  template.rs  weather.rs
src/resources/locale/weather/: en.json  ja.json
src/resources/locale/zone/: en.json  ja.json
src/scripts/: addToDatabase.py  convert.py
src/utils/: market.rs  paginate.rs  weather.rs
