[package]
name = "ffxiv-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
poise = "0.6.1"
reqwest = { version = "0.12.5", features = ["json"]}
serde = "1.0.203"
serde_json = "1.0.118"
serenity = "0.12"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
